# D3DVideoEncoder

./: .gitignore  CMakeLists.txt  D3DVideoEncoder_D3DHelper_Migration_Final_Report_JA.md  README.md
.github/workflows/: apply_qp23_patch.yml
cmake/: D3DVideoEncoderDxcRuntime.cmake
docs/: STEREO_SYNC_SAMPLE.md
include/D3DVideoEncoder/: D3D11VideoEncoder.hpp  D3D12VideoEncoder.hpp  D3D12VideoEncoderDesc.hpp  D3DVideoEncoder.hpp  D3DVideoEncoderDesc.hpp  D3DVideoEncoderError.hpp  D3DVideoEncoderTypes.hpp
sample/: d3d12_stereo_sync.cpp
sample/01_encode_d3d11_texture/: CMakeLists.txt  main.cpp
sample/02_d3d12_video_encode_h264_rgb_mp4/: CMakeLists.txt  main.cpp
sample/03_d3d12_video_encode_hevc_p010_mp4/: CMakeLists.txt  main.cpp
sample/04_d3d12_video_encode_capability_dump/: CMakeLists.txt  main.cpp
src/: D3D11VideoEncoder.cpp  D3D11VideoEncoderImpl.cpp  D3D11VideoEncoderImpl.hpp  D3D12VideoEncoder.cpp  D3D12VideoEncoderImpl.cpp  D3D12VideoEncoderImpl.hpp  D3DVideoEncoder.cpp  D3DVideoEncoderDesc.cpp
src/async/: D3D12EncodeJobQueue.cpp  D3D12EncodeJobQueue.hpp  EncodeJobQueue.cpp  EncodeJobQueue.hpp
src/backend/: IVideoEncoderBackend.hpp  MediaFoundationEncoderBackend.cpp  MediaFoundationEncoderBackend.hpp  MediaFoundationRuntime.cpp  MediaFoundationRuntime.hpp  UnsupportedEncoderBackend.cpp  UnsupportedEncoderBackend.hpp
src/backend/d3d12video/: D3D12VideoEncodeBackend.cpp  D3D12VideoEncodeBackend.hpp  D3D12VideoEncodeBitstreamWriter.cpp  D3D12VideoEncodeBitstreamWriter.hpp  D3D12VideoEncodeCapabilities.cpp  D3D12VideoEncodeCapabilities.hpp  D3D12VideoEncodeDiagnostic.hpp  D3D12VideoEncodeFrameScheduler.hpp  D3D12VideoEncodeH264ParameterSets.cpp  D3D12VideoEncodeH264ParameterSets.hpp  ID3D12VideoEncodeBackend.hpp
src/backend/mux/: NvencMp4DurationBoxes.hpp  NvencOutputMuxer.cpp  NvencOutputMuxer.hpp
src/backend/nvenc/: INvencD3D12EncoderBackend.hpp  NvencCommon.cpp  NvencCommon.hpp  NvencD3D11EncoderBackend.cpp  NvencD3D11EncoderBackend.hpp  NvencD3D12EncoderBackend.cpp  NvencD3D12EncoderBackend.hpp  NvencD3D12OutputStrategy.cpp  NvencD3D12OutputStrategy.hpp  NvencLifecyclePolicy.hpp
src/input/: D3D11VideoInputAdapter.cpp  D3D11VideoInputAdapter.hpp
src/surface/: D3D11EncodeSurfacePool.cpp  D3D11EncodeSurfacePool.hpp  EncodeSurface.hpp
src/util/: DebugLog.cpp  DebugLog.hpp  HResult.cpp  HResult.hpp  TimestampGenerator.cpp  TimestampGenerator.hpp
test/: CMakeLists.txt  test_config.hpp.in  test_d3d11_encode_async_smoke.cpp  test_d3d11_encode_smoke.cpp  test_d3d11_hevc_p010_smoke.cpp  test_d3d11_mf_capabilities.cpp  test_d3d12_encode_job_queue.cpp  test_d3d12_unsupported_backend.cpp  test_d3d12_video_encode_acceptance.cpp  test_d3d12_video_encode_capabilities.cpp  test_d3d12_video_encode_frame_scheduler.cpp  test_d3d12_video_encode_h264_mp4_smoke.cpp  test_d3d12_video_encode_h264_nv12_async_smoke.cpp  test_d3d12_video_encode_h264_nv12_smoke.cpp  test_d3d12_video_encode_h264_parameter_sets.cpp  test_d3d12_video_encode_hevc_p010_mp4_smoke.cpp  test_d3d12_video_encode_hevc_p010_smoke.cpp  test_d3d12_video_encode_minimal_probe.cpp  test_d3d12_video_encode_nv12_crop_resize_smoke.cpp  test_d3d12_video_encode_rgba_h264_mp4_smoke.cpp  test_desc_validation.cpp  test_encode_job_queue.cpp  test_hresult.cpp  test_nvenc_capabilities.cpp  test_nvenc_d3d11_direct_nv12_acceptance.cpp  test_nvenc_d3d11_h264_mp4_smoke.cpp  test_nvenc_d3d12_acceptance.cpp  test_nvenc_d3d12_output_strategy.cpp  test_nvenc_d3d12_rgba_h264_mp4_smoke.cpp  test_nvenc_lifecycle.cpp  test_nvenc_mp4_duration.cpp  test_timestamp_generator.cpp  test_types.cpp
tools/: make_test_videos.cmd  make_test_videos.ps1
